--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="babytrump.png">
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="BABY TRUMP - MAKE AMEMRICA GREAT GAIN">
+    <meta name="twitter:title" content="BABY TRUMP - MAKE AMEMRICA GREAT AGAIN">
     <meta name="twitter:description" content="Donald Trump, the former President of the United States, recently survived an assassination attempt when a bullet grazed his ear during a recent event. Despite the danger, he demonstrated unwavering spirit and continued to fight for the values he believes in, including the famous slogan Make America Great Again. This attack not only raised concerns about security but also underscored the deep political polarization in America.">
     <meta name="twitter:image" content="babytrump.png">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
