--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#tokenomics">Tokenomics</a></li>
-            <li><a href="">Whitepaper</a></li>
+            <li><a href="https://baby-trump.gitbook.io/baby-trump/">Whitepaper</a></li>
           </ul>
           <div class="buynow">
             <img src="buynow.png" alt="buynow" />
@@ -44,7 +44,7 @@
             <div class="babymusk">
               <img src="trumpbnb.png" alt="babytrump"/>
               <img src="bsclogo.png" alt="babytrump" style="display:none"/>
-              <img src="200musk.png" alt="babytrump" style="display:none"/>
+              <img src="maga200.png" alt="babytrump" style="display:none"/>
               <div class="leaders">
                 <h4><span style="color: white; font-size:5vw;">BABY TRUMP</span> <br> <span style="text-shadow: 
         -2px -2px 0 #252E69,  
